Fix overflow, fixes #16

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -15,7 +15,7 @@ iframe { border:none;}
 .holder { width: 1104px; margin: 0 auto; }
 
 .video { background:#000;overflow: hidden;height:1000px}
-.video .background { opacity:0.7}
+.video #bgVideo { opacity:0.7}
 .video .holder { display: table; height: 100%; width: 100%; position: absolute; top: 0; left: 0;}
 .video .cont { display: table-cell; vertical-align: middle; height: 100%; width: 100%;text-align: center;-webkit-transition: 1s; -moz-transition: 1s; -ms-transition: 1s; -o-transition: 1s; transition: 1s;opacity:0}
 
